--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,32 +1,102 @@
+body {
+	background: #a5bdc0;
+	margin-top:50px;
+	color:white;
+}
+
 .calc-container {
 	max-width:300px;
+	background: #F3EEE7;
+	padding:30px;
+	/*padding-left:37.5;*/
+	border-radius:3px;
+	
+	-webkit-box-shadow: 0px 3px 11px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 3px 11px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 3px 11px 0px rgba(0,0,0,0.75);
+
+}
+.operator {
+	
+}
+
+.row {
+
 }
 .button {
 	/*padding:20px;*/
 	margin:0px;
 	padding:0px;
-	
+	font-size:20px;
 	
 }
 
+/*.button-right {
+	margin-right:0px;
+}*/
+
 #display {
-	border: 1px solid black;
+	/*border: 1px solid black;*/
 	min-height:50px;
-	margin-top:20px;
-	margin-bottom:20px;
+	margin-top:0px;
+	margin-bottom:10px;
 	background: #cdd9bf;
+	height:57px;
+	font-size:40px;
+	text-align:right;
+	letter-spacing:2.5px;
+	background-color: #cacab4;
+	color: #535346;
+	border-radius:3px;
+
+	-webkit-box-shadow: inset 0px 3px 11px 0px rgba(119,119,85,0.5);
+	-moz-box-shadow: inset 0px 3px 11px 0px rgba(119,119,85,0.5);
+	box-shadow: inset 0px 3px 11px 0px rgba(119,119,85,0.5);
+
 }
 
 .button-inner {
 	/*margin:5px;*/
 	/*margin-right:0px;*/
-	background: #d2d2d2;
-	border:1px solid black;
+	background: #42453b;
+	border-radius:5px;
+	/*border:1px solid black;*/
 	/*padding-right:5px;
 	padding-bottom:5px;*/
-	margin-right:5px;
-	margin-top:5px;
-	padding:5px;
-	width:70px;
-	height:70px;
+	/*margin-right:8px;*/
+	/*margin-top:10px;*/
+
+	margin: 0 auto;
+	margin-top:8px;
+	margin-left:5px;
+	
+	width:55.5px;
+	height:55px;
+
+	
+  border:none;
+
+-webkit-box-shadow: inset 0px 0px 11px 2px rgba(255,255,255,0.3);
+-moz-box-shadow: inset 0px 0px 11px 2px rgba(255,255,255,0.3);
+box-shadow: inset 0px 0px 11px 2px rgba(255,255,255,0.3);
+
+border-bottom:2px solid #272a22;
+}
+
+.button-inner:active {
+	border-bottom:0px;
+}
+
+button:focus {
+	outline: none;
+}
+
+.number {
+	background: #a9ad9f;
+	border-bottom:2px solid #777c6a;
+}
+
+.clear-button {
+	background: #cf4b4f;
+	border-bottom:2px solid #8d2529;
 }
