--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,42 +1,65 @@
 body {
 	background: #a5bdc0;
-	margin-top:50px;
 	color:white;
+	margin-top:50px;
 }
 
 .calc-container {
 	max-width:300px;
 	background: #F3EEE7;
 	padding:30px;
+	padding-bottom:12px;
 	/*padding-left:37.5;*/
 	border-radius:3px;
 	
 	-webkit-box-shadow: 0px 3px 11px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 3px 11px 0px rgba(0,0,0,0.75);
 	box-shadow: 0px 3px 11px 0px rgba(0,0,0,0.75);
-
-}
-.operator {
-	
 }
 
-.row {
 
+/*===================
+	CALCULATOR TOP
+ ===================*/
+
+#calcTop {
+	margin-bottom:20px;
+	margin-top:5px;
 }
-.button {
-	/*padding:20px;*/
-	margin:0px;
-	padding:0px;
-	font-size:20px;
-	
+
+h1 {
+	font-family: 'Abel', sans-serif;
+	color:#4d4d4d;
+	font-size:19px;
+	margin-top:5px;
+	margin-bottom:0px;
+	font-weight:bold;
 }
 
-/*.button-right {
-	margin-right:0px;
-}*/
+#solar {
+	height:30px;
+	background:#be795b;
 
-#display {
-	/*border: 1px solid black;*/
+	-webkit-box-shadow: inset 0px 3px 11px 0px rgba(119,119,85,0.5);
+	-moz-box-shadow: inset 0px 3px 11px 0px rgba(119,119,85,0.5);
+	box-shadow: inset 0px 3px 11px 0px rgba(119,119,85,0.5);
+}
+
+.solar-box {
+	height:30px;
+	border-right:1.5px solid rgba(196, 169, 161,0.8)
+}
+
+.solar-box:nth-child(3) {
+	border: none
+}
+
+
+/*===================
+	CALCULATOR MAIN
+ ===================*/
+
+#displayBox {
 	min-height:50px;
 	margin-top:0px;
 	margin-bottom:10px;
@@ -52,43 +75,40 @@ body {
 	-webkit-box-shadow: inset 0px 3px 11px 0px rgba(119,119,85,0.5);
 	-moz-box-shadow: inset 0px 3px 11px 0px rgba(119,119,85,0.5);
 	box-shadow: inset 0px 3px 11px 0px rgba(119,119,85,0.5);
+}
 
+button:focus {
+	outline: none;
+}
+
+.button {
+	margin:0px;
+	padding:0px;
+	font-size:20px;
 }
 
 .button-inner {
-	/*margin:5px;*/
-	/*margin-right:0px;*/
 	background: #42453b;
 	border-radius:5px;
-	/*border:1px solid black;*/
-	/*padding-right:5px;
-	padding-bottom:5px;*/
-	/*margin-right:8px;*/
-	/*margin-top:10px;*/
-
 	margin: 0 auto;
 	margin-top:8px;
 	margin-left:5px;
-	
 	width:55.5px;
 	height:55px;
+  	border:none;
+  	border-bottom:2px solid #272a22;
 
-	
-  border:none;
-
--webkit-box-shadow: inset 0px 0px 11px 2px rgba(255,255,255,0.3);
--moz-box-shadow: inset 0px 0px 11px 2px rgba(255,255,255,0.3);
-box-shadow: inset 0px 0px 11px 2px rgba(255,255,255,0.3);
-
-border-bottom:2px solid #272a22;
+	-webkit-box-shadow: inset 0px 0px 11px 2px rgba(255,255,255,0.3);
+	-moz-box-shadow: inset 0px 0px 11px 2px rgba(255,255,255,0.3);
+	box-shadow: inset 0px 0px 11px 2px rgba(255,255,255,0.3);
 }
 
 .button-inner:active {
 	border-bottom:0px;
 }
 
-button:focus {
-	outline: none;
+#equal {
+	width:123px;
 }
 
 .number {
@@ -99,4 +119,26 @@ button:focus {
 .clear-button {
 	background: #cf4b4f;
 	border-bottom:2px solid #8d2529;
+}
+
+
+/*===================
+	CALCULATOR BOTTOM
+ ===================*/
+
+#calcBottom {
+	font-size:15px;
+	font-family: 'Abel', sans-serif;
+	color:#4d4d4d;
+	opacity:0.8;
+	font-weight:bold;
+	text-align:center;
+	margin-top:10px;
+
+}
+
+@media (max-width:500px){
+	body{
+		margin-top:25px;
+	}
 }
